--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,7 @@
   --ifm-color-primary-lighter: rgb(102, 212, 189);
   --ifm-color-primary-lightest: rgb(146, 224, 208);
   --ifm-code-font-size: 95%;
+  --doc-sidebar-width: 15em !important;
 }
 
 .docusaurus-highlight-code-line {
@@ -22,4 +23,14 @@
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
+}
+
+.container {
+  margin: 0;
+}
+
+@media (min-width: 997px) and (max-width: 1320px) {
+  .container.docItemWrapper_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocPage- {
+    max-width: unset;
+  } 
 }
