--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,7 @@
   --ifm-code-font-size: 95%;
   --doc-sidebar-width: 15em !important;
   --ifm-container-width: 100vw;
+  --ifm-leading: 0.2em;
 }
 
 .container.docItemWrapper_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocPage- {
@@ -34,7 +35,20 @@
   margin: 0;
 }
 
+.markdown h2 {
+  border-top: 2px solid var(--ifm-hr-border-color);
+  padding-top: calc(1.5 * var(--ifm-h2-vertical-rhythm-top) * var(--ifm-leading));
+  margin-top: calc(2 * var(--ifm-h2-vertical-rhythm-top) * var(--ifm-leading));
+  margin-bottom: calc(1.5 * var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading) );
+}
+
+.markdown h3 {
+  margin-top: calc(2.5 * var(--ifm-h3-vertical-rhythm-top) * var(--ifm-leading));
+  margin-bottom: calc( 2 * var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading) );
+}
+
 img {
   border: 2px solid var(--ifm-color-secondary);
   border-radius: 3px;
+  max-width: 75%;
 }
