Style h4s and down with a bit more spacing before

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -47,6 +47,12 @@
   margin-bottom: calc( 2 * var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading) );
 }
 
+.markdown>h4,
+.markdown>h5,
+.markdown>h6 {
+    margin-top: calc(4 * var(--ifm-heading-vertical-rhythm-top) * var(--ifm-leading));
+}
+
 img {
   border: 2px solid var(--ifm-color-secondary);
   border-radius: 3px;
