--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,13 +15,8 @@
   --ifm-color-primary-lighter: rgb(102, 212, 189);
   --ifm-color-primary-lightest: rgb(146, 224, 208);
   --ifm-code-font-size: 95%;
-  --doc-sidebar-width: 15em !important;
-  --ifm-container-width: 100vw;
-  --ifm-leading: 0.2em;
-}
-
-.container.docItemWrapper_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocPage- {
-  max-width: calc( var(--ifm-container-width) - var(--doc-sidebar-width) );
+  /* Give center section more room */
+  /*--doc-sidebar-width: 15em !important;*/
 }
 
 .docusaurus-highlight-code-line {
@@ -29,42 +24,4 @@
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
-}
-
-.container {
-  margin: 0;
-}
-
-.markdown h2 {
-  border-top: 2px solid var(--ifm-hr-border-color);
-  padding-top: calc(1.5 * var(--ifm-h2-vertical-rhythm-top) * var(--ifm-leading));
-  margin-top: calc(2 * var(--ifm-h2-vertical-rhythm-top) * var(--ifm-leading));
-  margin-bottom: calc(1.5 * var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading) );
-}
-
-.markdown h3 {
-  margin-top: calc(2.5 * var(--ifm-h3-vertical-rhythm-top) * var(--ifm-leading));
-  margin-bottom: calc( 2 * var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading) );
-}
-
-.markdown>h4,
-.markdown>h5,
-.markdown>h6 {
-  margin-top: calc(4 * var(--ifm-heading-vertical-rhythm-top) * var(--ifm-leading));
-}
-
-img {
-  border: 2px solid var(--ifm-color-secondary);
-  border-radius: 3px;
-  max-width: 75%;
-}
-
-p {
-  margin: 0 0 calc(3 * var(--ifm-paragraph-margin-bottom));
-}
-
-.markdown > pre,
-.markdown > ul,
-.markdown > p {
-  margin-bottom: calc(3 * var(--ifm-leading));
 }
