--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,16 +7,28 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #0050a2;
+  --ifm-color-primary-dark: #004892;
+  --ifm-color-primary-darker: #00448a;
+  --ifm-color-primary-darkest: #003871; 
+  --ifm-color-primary-light: #0058b2; 
+  --ifm-color-primary-lighter: #005cba; 
+  --ifm-color-primary-lightest: #0066cf; 
   --ifm-code-font-size: 95%;
   /* Give center section more room */
   /*--doc-sidebar-width: 15em !important;*/
+  --ifm-heading-margin-bottom: 
+}
+
+[data-theme='dark'] {
+  --ifm-color-primary: #e9c539;
+  --ifm-color-primary-dark: #e6bd1f;
+  --ifm-color-primary-darker: #deb619;
+  --ifm-color-primary-darkest: #b79514;
+  --ifm-color-primary-light: #eccd53;
+  --ifm-color-primary-lighter: #edd060;
+  --ifm-color-primary-lightest: #f3de8f;
+  --ifm-background-color: #000000;
 }
 
 .docusaurus-highlight-code-line {
