--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,9 +15,39 @@
   --ifm-color-primary-lighter: #005cba; 
   --ifm-color-primary-lightest: #0066cf; 
   --ifm-code-font-size: 95%;
+
+  --ifm-navbar-background-color: #002E60;
+  --ifm-navbar-link-color: #fff;
+
+  --ifm-navbar-link-hover-color: #ccc;
+
   /* Give center section more room */
   /*--doc-sidebar-width: 15em !important;*/
-  --ifm-heading-margin-bottom: 
+  --ifm-heading-margin-bottom: 0;
+  --ifm-footer-padding-vertical: 15px;
+}
+
+.docusaurus-highlight-code-line {
+  background-color: rgb(72, 77, 91);
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
+}
+
+.navbar-sidebar__item {
+  background-color: #fff;
+}
+
+.navbar-sidebar__item .clean-btn {
+  color: rgb(28, 30, 33);
+}
+
+.navbar-sidebar__brand .clean-btn {
+  color: white;
+}
+
+.navbar__inner .clean-btn {
+  color: white;
 }
 
 [data-theme='dark'] {
@@ -28,12 +58,15 @@
   --ifm-color-primary-light: #eccd53;
   --ifm-color-primary-lighter: #edd060;
   --ifm-color-primary-lightest: #f3de8f;
-  --ifm-background-color: #000000;
+
+  --ifm-navbar-background-color: rgb(36, 37, 38);
+  --ifm-background-color:#002E60;
 }
 
-.docusaurus-highlight-code-line {
-  background-color: rgb(72, 77, 91);
-  display: block;
-  margin: 0 calc(-1 * var(--ifm-pre-padding));
-  padding: 0 var(--ifm-pre-padding);
+[data-theme='dark'] .navbar-sidebar__item {
+  background-color: var(--ifm-navbar-background-color);
+}
+
+[data-theme='dark'] .navbar-sidebar__item .clean-btn {
+  color: white;
 }
