Make it clear which sidebar you are on

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,7 +19,7 @@
   --ifm-navbar-background-color: #002E60;
   --ifm-navbar-link-color: #fff;
 
-  --ifm-navbar-link-hover-color: #ccc;
+  --ifm-navbar-link-hover-color: #b79514;
 
   /* Give center section more room */
   /*--doc-sidebar-width: 15em !important;*/
