--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,7 +27,8 @@
   --ifm-footer-padding-vertical: 15px;
 }
 
-article a {
+article a,
+.table-of-contents a.table-of-contents__link--active {
   text-decoration: underline;
   text-decoration-thickness: 0.04em;
   text-underline-offset: 0.3em;
@@ -132,12 +133,6 @@ article .markdown p img {
   html[class*="docs-doc-id-alkiln"] .table-of-contents li:has(> a > code) {
     line-height: 1.5em;
   }
-}
-
-/* Demo what more accessible menu selection can look like */
-html[class*="docs-doc-id-alkiln"] a.table-of-contents__link--active {
-  text-decoration: underline;
-  text-underline-offset: .4em;
 }
 
 html[class*="docs-doc-id-alkiln"] *:not(h1),
