--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -34,11 +34,6 @@
   --ifm-navbar-background-color: var(--suffolk-dark-blue);
   --ifm-navbar-link-color: white;
   --ifm-navbar-link-hover-color: var(--suffolk-light-gold);
-  
-  /* --ifm-heading-margin-bottom: 0;
-  --ifm-footer-padding-vertical: var(--ifm-spacing-vertical); */
-
-  --ifm-code-font-size: 95%;
 }
 
 [data-theme='dark'] {
@@ -150,51 +145,58 @@ article .markdown p img {
   box-shadow: 5px 5px 20px gray;
 }
 
+/* The :has() selector is unsupported in browser versions with  >6% use) */
+@supports selector(:has(> foo)) {
+  html[class*="docs-doc-id-components/ALKiln"] {
+    & .table-of-contents a:has(> code),
+    & h2:has(code),
+    & h3:has(code),
+    & h4:has(code),
+    & h5:has(code) {
+      background-color: var(--ifm-code-background);
+      border: 0.1rem solid rgba(0, 0, 0, 0.1);
+      border-radius: var(--ifm-code-border-radius);
+      padding: var(--ifm-toc-padding-vertical) var(--ifm-toc-padding-horizontal);
+      
+      code {
+        border: none;
+        padding: 0;
+      }
+    }
+
+    & .table-of-contents li:has(> a > code) {
+      line-height: 1.5em;
+    }
+  }
+}
+
+html[class*="docs-doc-id-components/ALKiln"] {
+  & *:not(h1),
+  & *:not(h2),
+  & *:not(h3),
+  & *:not(h4),
+  & *:not(h5),
+  & *:not(h6) {
+    scroll-margin-top: var(--ifm-navbar-height);
+  }
+}
+
+/* Footer */
+
+.footer__title {
+  margin-bottom: 0;
+}
+
+/* Utility classes */
+
+.flex-wrap--nowrap {
+  flex-wrap: nowrap !important;
+}
+
 .negative {
   color: var(--ifm-color-danger-dark);
 }
 
 .positive {
   color: var(--ifm-color-success-dark);;
-}
-
-/* The :has() selector is unsupported in browser versions with  >6% use) */
-@supports selector(:has(> foo)) {
-  html[class*="docs-doc-id-alkiln"] .table-of-contents a:has(> code) code,
-  html[class*="docs-doc-id-alkiln"] h2:has(code) code,
-  html[class*="docs-doc-id-alkiln"] h3:has(code) code,
-  html[class*="docs-doc-id-alkiln"] h4:has(code) code,
-  html[class*="docs-doc-id-alkiln"] h5:has(code) code {
-    border: none;
-    padding: 0;
-  }
-
-  html[class*="docs-doc-id-alkiln"] .table-of-contents li:has(> a > code),
-  html[class*="docs-doc-id-alkiln"] h2:has(code),
-  html[class*="docs-doc-id-alkiln"] h3:has(code),
-  html[class*="docs-doc-id-alkiln"] h4:has(code),
-  html[class*="docs-doc-id-alkiln"] h5:has(code) {
-    background-color: var(--ifm-code-background);
-    border: 0.1rem solid rgba(0, 0, 0, 0.1);
-    border-radius: var(--ifm-code-border-radius);
-    padding: var(--ifm-toc-padding-vertical) var(--ifm-toc-padding-horizontal);
-  }
-
-  html[class*="docs-doc-id-alkiln"] .table-of-contents li:has(> a > code) {
-    line-height: 1.5em;
-  }
-}
-
-html[class*="docs-doc-id-alkiln"] *:not(h1),
-html[class*="docs-doc-id-alkiln"] *:not(h2),
-html[class*="docs-doc-id-alkiln"] *:not(h3),
-html[class*="docs-doc-id-alkiln"] *:not(h4),
-html[class*="docs-doc-id-alkiln"] *:not(h5),
-html[class*="docs-doc-id-alkiln"] *:not(h6) {
-    scroll-margin-top: var(--ifm-navbar-height);
-}
-
-/* Utility classes */
-.flex-wrap--nowrap {
-  flex-wrap: nowrap !important;
 }
