--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,9 +6,8 @@
  * work well for content-centric websites.
  */
 
-/* Overrides the default Infima variables with Suffolk's brand colors. */
+/* Override the default color palette with colors based on Suffolk's brand guidelines */
 :root {
-  /* Suffolk brand colors */
   --suffolk-light-blue: #41b6e6; /* rgb(65, 182, 230), alt. color from Suffolk's brand guidelines */
   --suffolk-medium-blue: #2c5697; /* rgb(44, 86, 151), alt. color from Suffolk's brand guidelines */
   --suffolk-dark-blue: #15284b; /* rgb(21, 40, 75), primary color from Suffolk brand guidelines */
@@ -17,13 +16,13 @@
   --suffolk-blue-wash: rgba(65, 182, 230, .25); /* based on --suffolk-light-blue */
   --suffolk-gold-wash: rgba(253, 185, 36, .25); /* based on --suffolk-gold, above */
 
-  --ifm-color-primary: var(--suffolk-medium-blue);
-
+  
   /**
-   * These color ranges are based on the Suffolk brand colors.
-   * Each step is 3 steps away from the darkest/lightest on the ColorHexa shades and tints scale.
-   * See: https://www.colorhexa.com/15284b#shades-tints
-   */
+  * The color ranges below are based on the Suffolk brand colors.
+  * Each step is 3 steps away from the darkest/lightest on the ColorHexa shades and tints scale.
+  * See: https://www.colorhexa.com/15284b#shades-tints
+  */
+  --ifm-color-primary: var(--suffolk-medium-blue);
   --ifm-color-primary-dark: #2f5aa7;
   --ifm-color-primary-darker: #224179;
   --ifm-color-primary-darkest: var(--suffolk-dark-blue);
@@ -47,6 +46,9 @@
 
   --ifm-navbar-background-color: var(--suffolk-dark-blue);
 }
+
+
+/* Navbar */
 
 .navbar-sidebar__brand {
   .clean-btn {
@@ -82,20 +84,6 @@
       color: white;
     }
   }
-}
-
-article a,
-.table-of-contents a.table-of-contents__link--active {
-  text-decoration: underline;
-  text-decoration-thickness: 0.04em;
-  text-underline-offset: 0.3em;
-}
-
-.docusaurus-highlight-code-line {
-  background-color: rgb(72, 77, 91);
-  display: block;
-  margin: 0 calc(-1 * var(--ifm-pre-padding));
-  padding: 0 var(--ifm-pre-padding);
 }
 
 .header-github-link {
@@ -136,16 +124,45 @@ article a,
   }
 }
 
+/* Sidebar */
+
+/* This goes with the "Assembly Line components" sidebar heading added in PR #492 */
 .menu__list-item.sidebar-heading {
   font-weight: bold;
   padding: var(--ifm-menu-link-padding-vertical) var(--ifm-menu-link-padding-horizontal);
 }
 
-article .markdown p img {
-  box-shadow: 5px 5px 20px gray;
+
+/* Pages */
+
+.table-of-contents {
+  a.table-of-contents__link--active {
+    text-decoration: underline;
+    text-decoration-thickness: 0.04em;
+    text-underline-offset: 0.3em;
+  }
 }
 
-/* The :has() selector is unsupported in browser versions with  >6% use) */
+article {
+  a {
+    text-decoration: underline;
+    text-decoration-thickness: 0.04em;
+    text-underline-offset: 0.3em;
+  }
+
+  .markdown {
+    p {
+      img {
+        box-shadow: 5px 5px 20px gray;
+      }
+    }
+  }
+}
+
+
+/** ALKiln pages
+  * The :has() selector is unsupported in browser versions with  >6% use) 
+  */
 @supports selector(:has(> foo)) {
   html[class*="docs-doc-id-components/ALKiln"] {
     & .table-of-contents a:has(> code),
@@ -181,11 +198,13 @@ html[class*="docs-doc-id-components/ALKiln"] {
   }
 }
 
+
 /* Footer */
 
 .footer__title {
   margin-bottom: 0;
 }
+
 
 /* Utility classes */
 
