--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -78,7 +78,7 @@
   margin-top: calc(2 * var(--ifm-spacing-vertical));
 }
 
-.section {
+.indexSection {
   margin: calc(4.5 * var(--ifm-spacing-vertical)) auto;
   max-width: 1100px;
 }
