--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -107,7 +107,7 @@ html[data-theme="dark"] {
   }
 }
 
-button[class*="toggleButton_node_modules"] {
+button[class*="toggleButton"] {
   color: white;
   margin-right: calc(.25 * var(--ifm-navbar-item-padding-horizontal));
   margin-left: calc(.25 * var(--ifm-navbar-item-padding-horizontal));
