--- a/pydoc-module-header.hbs
+++ b/pydoc-module-header.hbs
@@ -1,4 +1,13 @@
 ---
 sidebar_label: "{{ module.name }}"
-title: "{{ module.name }}"
+title: "{{#if module.docstring.summary}}{{ module.docstring.summary }}{{else}}{{ module.name }}{{/if}}"
 ---
+
+# Table of Contents
+
+{{#each module.members}}
+* [{{ name }}](#{{ name }})
+{{#each members}}
+  * [{{ name }}](#{{ ../name }}.{{ name }})
+{{/each}}
+{{/each}}
